# back

./: .gitignore  ConnectionManager.py  Dockerfile  Room.py  RoomManager.py  pyproject.toml  requirements.txt  restapi.py
gamemodes/: basic_pairs.json  json_evaluator_example.py  json_evaluator_test.py
src/: ConnectionManager.py  ImageFetchManager.py  LevelManager.py  Player.py  PlayerManager.py  Room.py  RoomManager.py  TempLevelManager.py  Timer.py  app.py  restapi.py
src/gamemodes/: JsonEvaluator.py  JsonEvaluatorManager.py  ModularFunctionsManager.py  basic_pairs.json
src/gamemodes/jsons/: basic_pairs.json  too_many_labels.json
static/: labels.txt
